--- a/src/app/pages/demo/pages/shared/shared.component.html
+++ b/src/app/pages/demo/pages/shared/shared.component.html
@@ -11,14 +11,32 @@
   <br><br><br>
 
 
-  <app-form-field label="Input" [required]="true" [control]="form['controls']['input']" [isInline]="isInline">
+  <app-form-field label="Input" [required]="true" [control]="form['controls']['input']" [isInline]="isInline" [patternError]="regexErrors.email">
 
     <app-input formControlName="input"></app-input>
 
   </app-form-field>
 
 
-</form>
+  <app-form-field label="Password" [required]="true" [control]="form['controls']['password']" [isInline]="isInline" [patternError]="regexErrors.password">
+
+    <app-password formControlName="password"></app-password>
+
+  </app-form-field>
+
+
+  <app-form-field  label="Select" [required]="true" [control]="form['controls']['select']" [isInline]="isInline" >
+
+    <app-select formControlName="select" [items]="items"></app-select>
+    
+  </app-form-field>
+
+
 
 
 <code>{{form.value | json}}</code>
+
+</form>
+
+
+
