--- a/src/app/shared/controls/input/input.component.html
+++ b/src/app/shared/controls/input/input.component.html
@@ -1,2 +1,8 @@
-<input type="text" class="app-input" [value]="value" [placeholder]="placeholder || ''"
-  [attr.disabled]="isDisabled ? true : null" (input)="onKeyUp($event)" (blur)="onBlur()">
+<input
+type="text"
+class="app-input"
+[value]="value"
+[placeholder]="placeholder || ''"
+  [attr.disabled]="isDisabled ? true : null"
+  (input)="onKeyUp($event)"
+  (blur)="onBlur()">
