--- a/src/app/pages/demo/pages/shared/shared.component.html
+++ b/src/app/pages/demo/pages/shared/shared.component.html
@@ -28,13 +28,14 @@
   <app-form-field  label="Select" [required]="true" [control]="form['controls']['select']" [isInline]="isInline" >
 
     <app-select formControlName="select" [items]="items"></app-select>
-    
+
   </app-form-field>
 
-
+  
 
 
 <code>{{form.value | json}}</code>
+<code>{{items}}</code>
 
 </form>
 
