--- a/src/app/shared/controls/select/select.component.html
+++ b/src/app/shared/controls/select/select.component.html
@@ -1,5 +1,5 @@
-<select class="select app-input"  [class.select_disabled]="isDisabled">
+<div class="select app-input"  [class.select_disabled]="isDisabled">
   <mat-select [value]="value" [disabled]="isDisabled" (selectionChange)="onChanged($event)" (blur)="onBlur()">
-    <mat-option *ngFor="let item of items" [value]="item.value">{{item}}</mat-option>
+    <mat-option *ngFor="let item of items" [value]="item.value">{{item.label}}</mat-option>
   </mat-select>
-</select>
+</div>
