--- a/src/app/pages/demo/pages/shared/shared.component.html
+++ b/src/app/pages/demo/pages/shared/shared.component.html
@@ -35,6 +35,11 @@
     <app-checkboxes formControlName="checkboxes" [items]="itemss"></app-checkboxes>
 
   </app-form-field>
+  <app-form-field  label="Radios" [required]="true" [control]="form['controls']['radios']" [isInline]="isInline" >
+
+    <app-radios formControlName="radios" [items]="itemsss"></app-radios>
+
+  </app-form-field>
 
 
 
