--- a/src/app/pages/demo/pages/shared/shared.component.html
+++ b/src/app/pages/demo/pages/shared/shared.component.html
@@ -1,52 +1,65 @@
+<h2>Actions</h2>
+
+
+<app-button (click)="onToggleSpinner()">Toggle Spinner</app-button>
+<app-button (click)="onError()">Error</app-button>
+<app-button (click)="onSuccess()">Success</app-button>
+
+
 <h2>Form</h2>
 
+<div class="wrapper">
+  <form [formGroup]="form" novalidate autocomplete="off" (ngSubmit)="onSubmit()">
+   <app-spinner *ngIf="showSpinner"></app-spinner>
 
-<form [formGroup]="form" novalidate autocomplete="off" (ngSubmit)="onSubmit()">
-
-
-  <app-button (click)="onPatchValue()">Patch Value</app-button>
-  <app-button (click)="onToggleInline()">Toggle-inline</app-button>
-
-
-  <br><br><br>
-
-
-  <app-form-field label="Input" [required]="true" [control]="form['controls']['input']" [isInline]="isInline" [patternError]="regexErrors.email">
-
-    <app-input formControlName="input"></app-input>
-
-  </app-form-field>
+    <app-button (click)="onSubmit()">Submit</app-button>
+    <app-button (click)="onPatchValue()">Patch Value</app-button>
+    <app-button (click)="onToggleInline()">Toggle-inline</app-button>
+    <app-button (click)="onToggleDisable()">Toggle-disable</app-button>
+    <app-button (click)="onResetValues()">Reset form values</app-button>
 
 
-  <app-form-field label="Password" [required]="true" [control]="form['controls']['password']" [isInline]="isInline" [patternError]="regexErrors.password">
+    <br><br><br>
 
-    <app-password formControlName="password"></app-password>
+    <app-form-field label="Input" [required]="true" [control]="form['controls']['input']" [isInline]="isInline"
+      [patternError]="regexErrors.email">
 
-  </app-form-field>
+      <app-input formControlName="input"></app-input>
 
+    </app-form-field>
 
-  <app-form-field  label="Select" [required]="true" [control]="form['controls']['select']" [isInline]="isInline" >
+    <app-form-field label="Password" [required]="true" [control]="form['controls']['password']" [isInline]="isInline"
+      [patternError]="regexErrors.password">
 
-    <app-select formControlName="select" [items]="items"></app-select>
+      <app-password formControlName="password"></app-password>
 
-  </app-form-field>
-  <app-form-field  label="Checkbox" [required]="true" [control]="form['controls']['checkboxes']" [isInline]="isInline" >
+    </app-form-field>
 
-    <app-checkboxes formControlName="checkboxes" [items]="itemss"></app-checkboxes>
-
-  </app-form-field>
-  <app-form-field  label="Radios" [required]="true" [control]="form['controls']['radios']" [isInline]="isInline" >
-
-    <app-radios formControlName="radios" [items]="itemsss"></app-radios>
-
-  </app-form-field>
+    <app-form-field label="Autocomplete" [required]="true" [control]="form['controls']['autocomplete']"
+      [isInline]="isInline">
+      <app-autocomplete formControlName="autocomplete" [items]="items"></app-autocomplete>
+    </app-form-field>
 
 
+    <app-form-field label="Select" [required]="true" [control]="form['controls']['select']" [isInline]="isInline">
 
+      <app-select formControlName="select" [items]="items"></app-select>
+
+    </app-form-field>
+
+    <app-form-field label="Checkbox" [required]="true" [control]="form['controls']['checkboxes']" [isInline]="isInline">
+
+      <app-checkboxes formControlName="checkboxes" [items]="itemss"></app-checkboxes>
+
+    </app-form-field>
+    <app-form-field label="Radios" [required]="true" [control]="form['controls']['radios']" [isInline]="isInline">
+
+      <app-radios formControlName="radios" [items]="itemsss"></app-radios>
+
+    </app-form-field>
+
+
+  </form>
+</div>
 
 <code>{{form.value | json}}</code>
-
-</form>
-
-
-
