--- a/src/app/pages/demo/pages/shared/shared.component.html
+++ b/src/app/pages/demo/pages/shared/shared.component.html
@@ -11,42 +11,55 @@
   <br><br><br>
 
 
-  <app-form-field label="Input" [required]="true" [control]="form['controls']['input']" [isInline]="isInline" [patternError]="regexErrors.email">
+  <app-form-field label="Input" [required]="true" [control]="form['controls']['input']" [isInline]="isInline"
+    [patternError]="regexErrors.email">
 
     <app-input formControlName="input"></app-input>
 
   </app-form-field>
 
 
-  <app-form-field label="Password" [required]="true" [control]="form['controls']['password']" [isInline]="isInline" [patternError]="regexErrors.password">
+  <app-form-field label="Password" [required]="true" [control]="form['controls']['password']" [isInline]="isInline"
+    [patternError]="regexErrors.password">
 
     <app-password formControlName="password"></app-password>
 
   </app-form-field>
 
+  <app-form-field label="Autocomplete" [required]="true" [control]="form['controls']['autocomplete']" [isInline]="isInline">
+    <app-autocomplete formControlName="autocomplete" [items]="items"></app-autocomplete>
+  </app-form-field>
 
-  <app-form-field  label="Select" [required]="true" [control]="form['controls']['select']" [isInline]="isInline" >
+
+  <app-form-field label="Select" [required]="true" [control]="form['controls']['select']" [isInline]="isInline">
 
     <app-select formControlName="select" [items]="items"></app-select>
 
   </app-form-field>
-  <app-form-field  label="Checkbox" [required]="true" [control]="form['controls']['checkboxes']" [isInline]="isInline" >
+  <app-form-field label="Checkbox" [required]="true" [control]="form['controls']['checkboxes']" [isInline]="isInline">
 
     <app-checkboxes formControlName="checkboxes" [items]="itemss"></app-checkboxes>
 
   </app-form-field>
-  <app-form-field  label="Radios" [required]="true" [control]="form['controls']['radios']" [isInline]="isInline" >
+  <app-form-field label="Radios" [required]="true" [control]="form['controls']['radios']" [isInline]="isInline">
 
     <app-radios formControlName="radios" [items]="itemsss"></app-radios>
 
+  </app-form-field>
+  <app-form-field label="Date" [required]="true" [control]="form['controls']['date']" [isInline]="isInline">
+
+    <app-date formControlName="date"></app-date>
+
+  </app-form-field>
+
+
+  <app-form-field label="Date Range" [required]="true" [control]="form['controls']['dateRange']" [isInline]="isInline">
+    <app-date-range formControlName="dateRange"></app-date-range>
   </app-form-field>
 
 
 
 
-<code>{{form.value | json}}</code>
+  <code>{{form.value | json}}</code>
 
 </form>
-
-
-
