--- a/src/app/shared/controls/radios/radios.component.html
+++ b/src/app/shared/controls/radios/radios.component.html
@@ -1,4 +1,4 @@
-<div class="radios">
+<div class="radio">
   <div *ngFor="let item of items">
     <label class="radio" [class.checkbox_disabled]="isDisabled">
       {{item.label}}
