--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,5 +2,8 @@
     <div class="header__title">Architect</div>
     <div class="header__navigation">
         <a class="app-a" routerLink="demo">Demo</a>
+        <a class="app-a" routerLink="auth/login" routerLinkActive="app-a_active">Log in</a>
+        <a class="app-a" routerLink="auth/registration" routerLinkActive="app-a_active"> Registration</a>
+
     </div>
 </div>
